--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "build:ui": "rm -rf build && cd C:/Users/samitup/puhelinluettelo-new && npm run build --prod && cp -r build C:/Users/samitup/puhelinluetteloBackEnd",
     "build": "react-scripts build",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
+    "logs:prod": "heroku logs --tail",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "json-server -p3001 db.json"
   },
+  "proxy": "http://localhost:3001",
   
   "eslintConfig": {
     "extends": "react-app"
